test_regress/t/t_dpi_name_bad.out
%Error: t/t_dpi_name_bad.v:12:32: DPI function has illegal characters in C identifier name: 'badly.named'
   import "DPI-C" function int \badly.named (int i);
                               ^~~~~~~~~~~~
%Error: Exiting due to
